--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-914.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: v2.emovpn.xyz, port: 1253, type: vmess, uuid: 4a12d47a-246c-4c38-80a8-c2913ca118c4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2.emovpn.xyz}}
+  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇬🇧 英国-887.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.58MB/s(Youtube:不良林), server: 36.139.154.17, port: 45413, type: vmess, uuid: 20f731db-9c56-451f-b926-4e33186dfcbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.17}}
   - {name: 🇭🇰 香港-2.83MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.99MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇭🇰 香港-447.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2, server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-888.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-914.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-887.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
       - 🇭🇰 香港-447.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
