--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-309.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 26021, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-256.9KB/s(Youtube:不良林), server: v2.emovpn.xyz, port: 1253, type: vmess, uuid: 4a12d47a-246c-4c38-80a8-c2913ca118c4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2.emovpn.xyz}}
-  - {name: 🇫🇷 法国-916.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-992.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-4.54MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.20MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-178.5KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
   - {name: 🇨🇳 中国-462.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-616.7KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-916.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1007.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-616.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
