--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-325.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: 36.139.154.17, port: 45413, type: vmess, uuid: 20f731db-9c56-451f-b926-4e33186dfcbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.17}}
-  - {name: 🇺🇸 美国-240.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.73MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-793.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇮🇳 印度-2.33MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
   - {name: 🇸🇬 新加坡-2.55MB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-301.8KB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
   - {name: 🇻🇳 越南-1.40MB/s(Youtube:不良林), server: 123.31.41.42, port: 80, type: vmess, uuid: 0d89d3a3-17c0-4b8d-cdb6-a441207e1a38, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 123.31.41.42}}
+  - {name: 🇨🇦 加拿大-584.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-240.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
